src/test/deca/syntax/valid/parser/oracle/if_elseif_else_void.deca
{
    if(true || false){
    } elseif(true || false){
    } else {
    }
}