src/test/deca/syntax/invalid/parser/oracle/elseif_without_if.deca
{
    int i = 0;
    else if{print(1);}
}